@@ -3,8 +3,8 @@
         "particle": "minecraft:blocks/dirt",
         "bottom": "minecraft:blocks/dirt",
         "top": "minecraft:blocks/grass_top",
-        "side": "minecraft:blocks/grass_side",
-        "overlay": "minecraft:blocks/grass_side_overlay"
+        "side": "minecraft:blocks/grass_top",
+        "overlay": "minecraft:blocks/grass_top"
     },
     "elements": [
         {   "from": [ 0, 15, 0 ],
@@ -12,10 +12,10 @@
             "faces": {
                 "down":  { "uv": [ 0, 0, 16, 16 ], "texture": "#bottom", "cullface": "down" },
                 "up":    { "uv": [ 0, 0, 16, 16 ], "texture": "#top",    "cullface": "up", "tintindex": 0 },
-                "north": { "uv": [ 0, 0, 16, 16 ], "texture": "#side",   "cullface": "north" },
-                "south": { "uv": [ 0, 0, 16, 16 ], "texture": "#side",   "cullface": "south" },
-                "west":  { "uv": [ 0, 0, 16, 16 ], "texture": "#side",   "cullface": "west" },
-                "east":  { "uv": [ 0, 0, 16, 16 ], "texture": "#side",   "cullface": "east" }
+                "north": { "uv": [ 0, 15, 16, 16 ], "texture": "#side",   "cullface": "north" },
+                "south": { "uv": [ 0, 15, 16, 16 ], "texture": "#side",   "cullface": "south" },
+                "west":  { "uv": [ 0, 15, 16, 16 ], "texture": "#side",   "cullface": "west" },
+                "east":  { "uv": [ 0, 15, 16, 16 ], "texture": "#side",   "cullface": "east" }
             }
         },
         {   "from": [ 0, 15, 0 ],
