@@ -4,6 +4,7 @@ import java.util.UUID;
 
 import com.mojang.authlib.GameProfile;
 
+import net.minecraft.block.state.IBlockState;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.init.Blocks;
 import net.minecraft.init.Items;
@@ -39,21 +40,19 @@ public class ActionHandler {
 			
 			ItemStack item = player.getHeldItemMainhand();
 			if(item != null && item.getItem() == Items.SKULL && item.getItemDamage() == 3) {
-				FMLLog.info("OUtput");
 				if(face != null) {
 					BlockPos tPos = pos.up(face.getFrontOffsetY());
 					
 		
 					if(world.isAirBlock(tPos)) {
-						if(world.getBlockState(tPos.down()).getBlock() == Blocks.PLANKS && world.getBlockState(tPos.down(2)).getBlock() == Blocks.PLANKS) {
+						IBlockState variant = world.getBlockState(tPos.down());
+						IBlockState test = world.getBlockState(tPos.down(2));
+						
+						if(variant.getBlock() == Blocks.PLANKS && test.getBlock() == Blocks.PLANKS && Blocks.PLANKS.getMetaFromState(variant) == Blocks.PLANKS.getMetaFromState(test)) {
 							if(!player.canPlayerEdit(tPos, face, item) || !Blocks.SKULL.canPlaceBlockAt(world, tPos))
 				                return;
 				            else {
 				                world.setBlockState(tPos, Blocks.SKULL.getDefaultState().withProperty(Blocks.SKULL.FACING, player.getHorizontalFacing()).withProperty(Blocks.SKULL.NODROP, Boolean.valueOf(false)));
-				                int i1 = 0;
-				                if (face == EnumFacing.UP) {
-				                    i1 = MathHelper.floor_double((double)(player.rotationYaw * 16.0F / 360.0F) + 0.5D) & 15;
-				                }
 		
 				                if(!player.capabilities.isCreativeMode)
 				                	--item.stackSize;
@@ -61,15 +60,17 @@ public class ActionHandler {
 				                world.setBlockToAir(tPos);
 				        		world.setBlockToAir(tPos.down());
 				        		world.setBlockToAir(tPos.down(2));
-				        		float rotation = player.rotationYaw;
+				        		float rotation = player.rotationYaw + 180F;
 				        		
 				        		if (rotation >= 360F) {
 				        			rotation -= 360F;
 				        		}
 
 				        		EntityDummy entitydummy = new EntityDummy(world);
-				        		entitydummy.setLocationAndAngles((double)tPos.getX() + 0.5D, (double)tPos.getY() - 1.95D, (double)tPos.getZ() + 0.5D, 50F, 0.0F);
+				        		entitydummy.setVariant((byte)variant.getBlock().getMetaFromState(variant));
+				        		entitydummy.setLocationAndAngles((double)tPos.getX() + 0.5D, (double)tPos.getY() - 1.95D, (double)tPos.getZ() + 0.5D, rotation, 0.0F);
 				        		world.spawnEntityInWorld(entitydummy);
+				        	
 				                event.setCanceled(true);
 				            }
 						}
