@@ -1,0 +1,19 @@
+package trapcraft.lib;
+
+
+/**
+ * @author ProPercivalalb
+ */
+public class Reference {
+
+	//Mod Related Constants 
+	public static final String 		 MOD_ID 	      = "trapcraft";
+	public static final String		 MOD_NAME         = "Trapcraft";
+	public static final String 		 MOD_VERSION      = "v3.0.0a";
+	public static final String 		 UPDATE_URL 	  = "https://raw.githubusercontent.com/ProPercivalalb/Trapcraft/master/version.json";
+	public static final String 		 CLIENT_PROXY 	  = "trapcraft.proxy.ClientProxy";
+	public static final String 		 SERVER_PROXY     = "trapcraft.proxy.CommonProxy";
+	public static final String       CHANNEL_NAME     = "TRAPCRAFT";
+	
+	public static final boolean		 DEBUG 			  = false;
+}
